# klay

./: .gitignore  README.md  appwrite.json
backend/: .gitignore  main.py  pyproject.toml
backend/src/: __init__.py
backend/src/dependencies/: auth.py
backend/src/exceptions/: HTTPException.py
backend/src/routers/: __init__.py  chat_messages.py  chat_requests.py  profile.py
backend/src/util/: aw.py  mongo.py
frontend/: .eslintrc.js  .postcssrc.js  .prettierrc  README.md  babel.config.js  package.json  quasar.config.js  tsconfig.json
frontend/src/: App.vue  env.d.ts  index.template.html  shims-vue.d.ts  types.ts
frontend/src-capacitor/: capacitor.config.json  package.json
frontend/src-capacitor/android/: capacitor.settings.gradle
frontend/src-capacitor/android/app/: build.gradle  (+1 more)
frontend/src/components/: AskPin.vue  ChatMessage.vue  ContactsItem.vue  EssentialLink.vue  ScanQRCode.vue  UpdateMessageDialog.vue
frontend/src/layouts/: MainLayout.vue  SettingsLayout.vue
frontend/src/lib/: appwrite.ts  axios.ts  encryption.ts  jwt.ts  types.ts  util.ts
frontend/src/pages/: AddPersonPage.vue  AuthPage.vue  ErrorNotFound.vue  IndexPage.vue  RequestsPage.vue  SettingsPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: chatRequests.ts  contacts.ts  keyPair.ts  messages.ts  privateKey.ts  publicKeys.ts  toolbarTitle.ts  user.ts
functions/: .env.example  .prettierrc  deploy.ts
functions/clear-chat-events-every-15-min/: .env.example  README.md  package.json
functions/create-profile-on-account-creation/: README.md  package.json
(+15 files in other folders)
